--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kerala Veg Restaurant - Order management system for authentic vegetarian Kerala cuisine">
+    <meta name="keywords" content="restaurant, Kerala cuisine, vegetarian, order management">
+    <meta name="author" content="Kerala Veg Restaurant">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https: data:">
     <title>Kerala Veg Restaurant - Orders</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
