--- a/new-order.html
+++ b/new-order.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Create New Order - Kerala Veg Restaurant">
+    <meta name="keywords" content="new order, restaurant menu, Kerala cuisine">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https: data:">
     <title>Create New Order - Kerala Veg Restaurant</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
