--- a/reports.html
+++ b/reports.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sales Reports - Kerala Veg Restaurant">
+    <meta name="keywords" content="sales reports, analytics, restaurant">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https: data:">
     <title>Sales Reports - Kerala Veg Restaurant</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
