--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <script src="js/config.js"></script>
     <script src="js/items.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
 
